# Lynx

./: Lynx.spec  pyproject.toml
src/: __init__.py  main.py
src/core/: __init__.py
src/core/buffer/: gap_buffer.py  piece_table.py  undo_stack.py
src/core/editor/: document.py
src/core/lsp/: client.py
src/core/models/: document.py  file_tree.py  search_engine.py  text_buffer.py
src/core/syntax/: highlighter.py  tokenizer.py
src/profiles/: profile_manager.py
src/telemetry/: usage_tracker.py
src/ui/controllers/: document_controller.py  editor_application.py
src/ui/qml/: main.qml
src/ui/qml/components/: CommandPalette.qml  EditorArea.qml  FindModal.qml  GoToLineModal.qml  MenuBarComponent.qml  ModalOverlay.qml  ReplaceModal.qml  Sidebar.qml  SingleTabHeader.qml  StatusBar.qml  TabBar.qml
tests/: test_gap_buffer.py
