[project]
name = "lynx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psutil>=7.1.3",
    "pyside6>=6.10.1",
    "requests>=2.32.5",
    "semver>=3.0.4",
    "tree-sitter>=0.25.2",
]
[project.scripts]
lynx = "main:main"
